--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,26 +6,30 @@
     <p>
         About the Playlist App.
     </p>
+    <div class="ui cards">
 
+    {{#each employees}}
     <div class="ui centered card">
         <div class="image">
-            <img src="/matthew.png">
+            <img src="{{image}}">
         </div>
         <div class="content">
-            <a class="header"> {{info.fullname}} </a>
+            <a class="header"> {{fullname}} </a>
             <div class="meta">
-                <span class="date">Joined in {{info.joined}} </span>
+                <span class="date">Joined in {{joined}} </span>
             </div>
             <div class="description">
-               {{info.name}} is a {{info.job}} living in {{info.city}}.
+               {{name}} is a {{job}} living in {{city}}.
             </div>
         </div>
         <div class="extra content">
             <a>
                 <i class="user icon"></i>
-                {{info.mates}} contacts
+                {{mates}} contacts
             </a>
         </div>
+    </div>
+    {{/each}}
     </div>
 
 </section>
